<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_bluetooth"
        android:icon="@drawable/icon_bluetooth"
        android:title="@string/bluetooth"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/menu_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_date"
                android:title="@string/sort_date"/>
            <item
                android:id="@+id/action_sort_location"
                android:title="@string/sort_location"/>
            <item
                android:id="@+id/action_linear"
                android:title="Linear"/>
            <item
                android:id="@+id/action_sort_grid"
                android:title="Grid"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/menu_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
</menu>