<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/view_profile_header_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2"
        tools:src="@drawable/ic_favorite_red"/>


    <TextView
        android:id="@+id/view_profile_header_post_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:textColor="@color/black87"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/view_profile_header_c1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/view_profile_header_image"
        app:layout_constraintRight_toLeftOf="@id/view_profile_header_followers_text"
        app:layout_constraintTop_toTopOf="@id/view_profile_header_image"
        tools:text="123"/>

    <TextView
        android:id="@+id/view_profile_header_followers_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black87"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/view_profile_header_c1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/view_profile_header_post_text"
        app:layout_constraintRight_toLeftOf="@id/view_profile_header_following_text"
        app:layout_constraintTop_toTopOf="@id/view_profile_header_image"
        tools:text="456"/>

    <TextView
        android:id="@+id/view_profile_header_following_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="@color/black87"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/view_profile_header_c1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/view_profile_header_followers_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_profile_header_image"
        tools:text="789"/>

    <TextView
        android:id="@+id/view_profile_header_c1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:text="@string/posts"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/view_profile_header_follow_btn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/view_profile_header_image"
        app:layout_constraintRight_toLeftOf="@id/view_profile_header_c2"/>

    <TextView
        android:id="@+id/view_profile_header_c2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/followers"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/view_profile_header_follow_btn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/view_profile_header_c1"
        app:layout_constraintRight_toLeftOf="@id/view_profile_header_c3"/>

    <TextView
        android:id="@+id/view_profile_header_c3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/following"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/view_profile_header_follow_btn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/view_profile_header_c2"
        app:layout_constraintRight_toRightOf="parent"/>


    <Button
        android:id="@+id/view_profile_header_follow_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rectangle_rounded"
        android:minHeight="32dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/view_profile_header_image"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/view_profile_header_image"
        app:layout_constraintRight_toLeftOf="@id/view_profile_header_approve_request"
        tools:text="Follow"/>

    <Button
        android:id="@+id/view_profile_header_approve_request"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_rounded"
        android:minHeight="24dp"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/view_profile_header_image"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/view_profile_header_follow_btn"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Approve Request"/>

    <TextView
        android:id="@+id/view_profile_header_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black87"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_profile_header_image"
        tools:text="azuki beans"/>

    <EditText
        android:id="@+id/view_profile_header_desc"
        style="@style/FakeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_profile_header_profile_name"
        tools:text="I love azuki beans"/>

    <EditText
        android:id="@+id/view_profile_header_others_following"
        style="@style/FakeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_profile_header_desc"
        tools:text="Followed by dancmc"/>

    <View
        android:id="@+id/view_profile_header_top_line"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="16dp"
        android:background="@color/grey400"
        app:layout_constraintTop_toBottomOf="@id/view_profile_header_others_following"
        />

    <ImageView
        android:id="@+id/view_profile_header_grid_btn"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rectangle_square"
        android:src="@drawable/selector_grid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/view_profile_header_list_btn"
        app:layout_constraintTop_toBottomOf="@id/view_profile_header_top_line"/>

    <ImageView
        android:id="@+id/view_profile_header_list_btn"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rectangle_square"
        android:src="@drawable/selector_list"
        app:layout_constraintLeft_toRightOf="@id/view_profile_header_grid_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_profile_header_top_line"/>

    <View
        android:id="@+id/view_profile_header_btm_line"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="4dp"
        android:background="@color/grey400"
        app:layout_constraintTop_toBottomOf="@id/view_profile_header_list_btn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>